k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: plateforge
    app.kubernetes.io/name: plateforge
    app.kubernetes.io/part-of: plateforge
    app.kubernetes.io/component: backend
    component: backend
spec:
  type: LoadBalancer
  selector:
    app: plateforge
    component: backend
  ports:
    - name: api
      port: 8116
      targetPort: http
    - name: ui
      port: 3017
      targetPort: http
